feat : Admin pannel fix : PokemonFactoryTest
Everything seams to work fine